overflow issue are solved

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,9 @@
     /* most low level resulation like galaxy fold */
     
     @media (min-widht: 279px) and (max-widht: 319px) {
+        body {
+            overflow-x: hidden;
+        }
         .header .navbar-light .navbar-nav .nav-link {
             margin: 5px 0px 0px 12px;
         }
@@ -146,6 +149,9 @@
 */
     
     @media (min-width: 320px) and (max-width: 480px) {
+        body {
+            overflow-x: hidden;
+        }
         .header .navbar-light .navbar-nav .nav-link {
             margin: 5px 0px 0px 12px;
         }
@@ -307,6 +313,9 @@
 */
     
     @media (min-width: 481px) and (max-width: 767px) {
+        body {
+            overflow-x: hidden;
+        }
         /* CSS */
         .header .navbar-light .navbar-nav .nav-link {
             margin: 5px 0px 0px 12px;
@@ -481,6 +490,9 @@
 */
     
     @media (min-width: 768px) and (max-width: 1024px) {
+        body {
+            overflow-x: hidden;
+        }
         .header .navbar-light .navbar-nav .nav-link {
             margin: 5px 0px 0px 12px;
         }
